--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8" />
   <title>DevTasks - Gerenciador de Tarefas</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <link rel="stylesheet" href="CSS/style.css" />
+  <link rel="stylesheet" href="./style.css" />
 </head>
 <body>
   <header class="app-header">
@@ -100,6 +100,6 @@
     </p>
   </footer>
 
-  <script src="Js/script.js"></script>
+  <script src=./script.js"></script>
 </body>
 </html>
