--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <title>DevTasks - Gerenciador de Tarefas</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <link rel="icon" type="image/svg+xml" href="./favicon.svg" />
-  <link rel="stylesheet" href="./style.css" />
+  <link rel="stylesheet" href="./style.css?v=2" />
 </head>
 <body>
   <header class="app-header">
@@ -101,6 +101,6 @@
     </p>
   </footer>
 
-  <script src="./script.js"></script>
+  <script src="./script.js?v=2"></script>
 </body>
 </html>
